--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyGameList"
         tools:targetApi="31">
-
+        <activity
+            android:name=".ui.singup_Activity"
+            android:exported="false" />
         <activity
             android:name=".ui.login_Activity"
             android:exported="true">
@@ -22,18 +24,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name">
-        <!---
+
+            <!--
+            -
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        -->
+            -->
         </activity>
     </application>
 
