--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,11 @@
         android:theme="@style/Theme.MyGameList"
         tools:targetApi="31">
         <activity
+            android:theme="@style/Theme.loginSignUp"
             android:name=".ui.singup_Activity"
             android:exported="false" />
         <activity
+            android:theme="@style/Theme.loginSignUp"
             android:name=".ui.login_Activity"
             android:exported="true">
             <intent-filter>
@@ -25,6 +27,7 @@
             </intent-filter>
         </activity>
         <activity
+            android:theme="@style/Theme.MyGameList"
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name">
